--- a/beach_day/beach_day/MainPage.xaml
+++ b/beach_day/beach_day/MainPage.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:beach_day"
              x:Class="beach_day.MainPage">
     <MasterDetailPage.Master>
-        <ContentPage BackgroundColor="#E0F4FF" Padding="10" Title="Master">
+        <ContentPage BackgroundColor="#E0F4FF" Padding="30" Title="Master">
             <ContentPage.Content>
                 <StackLayout>
                     <!-- #000066	#E0F4FF	#FFFFFF	#FFCC00 -->
@@ -12,6 +12,25 @@
                     <Label Text="Welcome to the Master page, set Detail of the master page to alter the current page." 
                            HorizontalOptions="Center"
                            VerticalOptions="CenterAndExpand" />
+                    <Button Text="Beach Selection"
+                            VerticalOptions="CenterAndExpand"
+                            HorizontalOptions="Center"
+                            Clicked="BeachSelect_Creation_Button" />
+                    <Button Text="Beach Item Checklist"
+                            VerticalOptions="CenterAndExpand"
+                            HorizontalOptions="Center"
+                            Clicked="BeachItemChecklist_Creation_Button" />
+                    <Button Text="Beach Facts"
+                            VerticalOptions="CenterAndExpand"
+                            HorizontalOptions="Center"
+                            Clicked="BeachFacts_Creation_Button" />
+                    <Button Text="About"
+                            VerticalOptions="CenterAndExpand"
+                            HorizontalOptions="Center"
+                            Clicked ="About_Creation_Button" />
+                    <Image Source="beachDayLogo.png" 
+                           VerticalOptions="CenterAndExpand" 
+                           HorizontalOptions="Center"/>
                 </StackLayout>
              </ContentPage.Content>
 
