--- a/beach_day/beach_day/BeachSelectPage.xaml
+++ b/beach_day/beach_day/BeachSelectPage.xaml
@@ -10,13 +10,21 @@
                 VerticalOptions="Start" 
                 HorizontalOptions="CenterAndExpand" />
 
-            <ListView x:Name="WeatherList">
+            <ListView x:Name="WeatherList" RowHeight="250">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <StackLayout>
-                                    <Label Text="{Binding Time}"></Label>
+                                <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
+                                    <Label Text="{Binding Day}"></Label>
+                                    <Label Text="{Binding Month}"></Label>
+                                    <Label Text="{Binding TemperatureHigh}"></Label>
+                                    <Label Text="{Binding TemperatureHighTime}"></Label>
+                                    <Label Text="{Binding TemperatureLow}"></Label>
+                                    <Label Text="{Binding TemperatureLowTime}"></Label>
+                                    <Label Text="{Binding WindSpeed}"></Label>
+                                    <Label Text="{Binding UvIndex}"></Label>
+                                    <Label Text="{Binding Summary}"></Label>
                                 </StackLayout>
                             </ViewCell.View>
                         </ViewCell>
