Implemented functionality to pass the Picker's selected object's data to the Beach_Picked function.  We can now call the Weather API using the data passed.

--- a/beach_day/beach_day/BeachSelectPage.xaml
+++ b/beach_day/beach_day/BeachSelectPage.xaml
@@ -8,7 +8,7 @@
         <StackLayout>
 
             <Picker x:Name="BeachPicker" Title="Select A Beach..." 
-                    SelectedIndexChanged="Beach_SelectionButton_Clicked"
+                    SelectedIndexChanged="Beach_Picked"
                     ItemDisplayBinding ="{Binding Name}">
             </Picker>
 
