created CheckList Database query function and created a test ListView for Check List page.

--- a/beach_day/beach_day/ItemChecklist.xaml
+++ b/beach_day/beach_day/ItemChecklist.xaml
@@ -1,12 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="beach_day.ItemChecklist">
+             x:Class="beach_day.ItemChecklist"
+             Appearing="CheckListPage_Appearing">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Padding="6">
             <Label Text="Welcome to the Item Checklist!"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand"/>
+
+            <ListView x:Name="ItemViewList" RowHeight="50">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <ViewCell.View>
+                                <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
+                                    <Label Text="{Binding Name}" HorizontalOptions="Start"></Label>
+                                </StackLayout>
+                            </ViewCell.View>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
