--- a/beach_day/beach_day/ItemChecklist.xaml
+++ b/beach_day/beach_day/ItemChecklist.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="beach_day.ItemChecklist"
-             Appearing="CheckListPage_Appearing">
+             x:Class="beach_day.ItemChecklist">
     <ContentPage.Content>
         <StackLayout Padding="6">
+
             <Label Text="Welcome to the Item Checklist!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand"/>
@@ -13,6 +13,9 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
+                            <ViewCell.ContextActions>
+                                <MenuItem Text="Delete" Clicked="MenuItem_Delete_Clicked"  CommandParameter="{Binding .}" IsDestructive="True"/>
+                            </ViewCell.ContextActions>
                             <ViewCell.View>
                                 <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
                                     <Label Text="{Binding Name}" HorizontalOptions="Start"></Label>
@@ -23,6 +26,13 @@
                 </ListView.ItemTemplate>
             </ListView>
 
+            <Entry Placeholder="Add Item..." x:Name="UserItemInput"/>
+            <Button Text="Add To List" Clicked="Item_Added_Clicked"/>
+
         </StackLayout>
     </ContentPage.Content>
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Howdy!"></ToolbarItem>
+    </ContentPage.ToolbarItems>
+    
 </ContentPage>
