--- a/beach_day/beach_day/BeachSelectPage.xaml
+++ b/beach_day/beach_day/BeachSelectPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="beach_day.BeachSelectPage"
-             Appearing="ContentPage_Appearing">
+             x:Class="beach_day.BeachSelectPage">
+    
     <ContentPage.Content>
         
         <StackLayout>
