--- a/beach_day/beach_day/ItemChecklist.xaml
+++ b/beach_day/beach_day/ItemChecklist.xaml
@@ -31,8 +31,8 @@
 
         </StackLayout>
     </ContentPage.Content>
-    <ContentPage.ToolbarItems>
+    <!--<ContentPage.ToolbarItems>
         <ToolbarItem Text="Howdy!"></ToolbarItem>
     </ContentPage.ToolbarItems>
-    
+    -->
 </ContentPage>
