implemented DB interaction with the Checklist page's functionality.  Hardcoded values no longer needed.  Need to test DB from fresh install.

--- a/beach_day/beach_day/ItemChecklist.xaml
+++ b/beach_day/beach_day/ItemChecklist.xaml
@@ -5,7 +5,7 @@
     <ContentPage.Content>
         <StackLayout Padding="6">
 
-            <Label Text="Welcome to the Item Checklist!"
+            <Label Text="Your Checklist" FontSize="Large" FontAttributes="Bold"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand"/>
 
