--- a/beach_day/beach_day/MainPage.xaml
+++ b/beach_day/beach_day/MainPage.xaml
@@ -6,39 +6,56 @@
     <MasterDetailPage.Master>
         <ContentPage BackgroundColor="#E0F4FF" Padding="20" Title="Master">
             <ContentPage.Content>
-                <StackLayout>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="0.9*"/>
+                    </Grid.RowDefinitions>
                     <!-- #000066	#E0F4FF	#FFFFFF	#FFCC00 -->
-                    <!-- Place new controls here -->
-                    <Label Text="Welcome to the Master page, set Detail of the master page to alter the current page." 
-                           HorizontalOptions="Center"
-                           VerticalOptions="CenterAndExpand" />
+                    <Label Text="Beach Day" 
+                           HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
+                           FontSize="Large"
+                           Grid.Row="0"/>
                     <Button Text="Beach Selection"
                             VerticalOptions="CenterAndExpand"
                             HorizontalOptions="Center"
-                            Clicked="BeachSelect_Creation_Button" />
-                    <Button Text="Beach Item Checklist"
+                            Clicked="BeachSelect_Creation_Button" 
+                            Grid.Row="1"/>
+                    <Button Text="Item Checklist"
                             VerticalOptions="CenterAndExpand"
                             HorizontalOptions="Center"
-                            Clicked="BeachItemChecklist_Creation_Button" />
+                            Clicked="BeachItemChecklist_Creation_Button" 
+                            Grid.Row="2"/>
                     <Button Text="Beach Facts"
                             VerticalOptions="CenterAndExpand"
                             HorizontalOptions="Center"
-                            Clicked="BeachFacts_Creation_Button" />
-                    
-                    <Button Text="Even Tan Tool"
+                            Clicked="BeachFacts_Creation_Button" 
+                            Grid.Row="3"/>
+                    <Button Text="Tanning Tool"
                             VerticalOptions="CenterAndExpand"
-                            HorizontalOptions="Center"/>
-                    
+                            HorizontalOptions="Center"
+                            Clicked="TanningToolPage_Creation_Button"
+                            Grid.Row="4" />
                     <Button Text="About"
                             VerticalOptions="CenterAndExpand"
                             HorizontalOptions="Center"
-                            Clicked ="About_Creation_Button" />
+                            Clicked ="About_Creation_Button" 
+                            Grid.Row="5"/>
                     <Image Source="beachDayLogo.png"
                            WidthRequest="50"
                            HeightRequest="50"
                            VerticalOptions="CenterAndExpand" 
-                           HorizontalOptions="Center"/>
-                </StackLayout>
+                           HorizontalOptions="Center"
+                           Grid.Row="6"/>
+                </Grid>
             </ContentPage.Content>
 
         </ContentPage>
