--- a/beach_day/beach_day/App.xaml
+++ b/beach_day/beach_day/App.xaml
@@ -3,6 +3,32 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="beach_day.App">
     <Application.Resources>
+        <!-- #000066	#E0F4FF	#FFFFFF	#FFCC00 -->
+        <ResourceDictionary>
+            <Color x:Key="ThemeColor1">#000066</Color>
+            <Color x:Key="ThemeColor2">#E0F4FF</Color>
+            <Color x:Key="ThemeColor3">#FFCC00</Color>
+            <Color x:Key="ThemeColor4">#FFFFFF</Color>
+
+            <Style x:Key="LabelPageHeading1" TargetType="Label">
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="FontSize" Value="Large" />
+                <Setter Property="TextColor" Value="{StaticResource ThemeColor1}" />
+            </Style>
+            <Style x:Key="DefaultButton1" TargetType="Button">
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="BorderColor" Value="{StaticResource ThemeColor4}" />
+                <Setter Property="BorderWidth" Value="3.5"/>
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="BorderRadius" Value="10" />
+                <Setter Property="BackgroundColor" Value="{StaticResource ThemeColor3}" />
+                <Setter Property="TextColor" Value="{StaticResource ThemeColor1}" />
+            </Style>
+
+        </ResourceDictionary>
 
     </Application.Resources>
 </Application>
