--- a/beach_day/beach_day/BeachSelectPage.xaml
+++ b/beach_day/beach_day/BeachSelectPage.xaml
@@ -4,72 +4,81 @@
              x:Class="beach_day.BeachSelectPage">
     
     <ContentPage.Content>
-
-        <Grid ColumnSpacing="0" RowSpacing="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="0.5*" />
-                <RowDefinition Height="0.5*" />
-                <RowDefinition Height="1.5*" />
-                <RowDefinition Height="1.5*" />
-            </Grid.RowDefinitions>
+        <ScrollView>
+            <Grid ColumnSpacing="0" RowSpacing="0" BackgroundColor="{StaticResource ThemeColor2}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="1.5*" />
+                    <RowDefinition Height="1.5*" />
+                    <RowDefinition Height="0.5*" />
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+                </Grid.ColumnDefinitions>
+
+                <Label Text ="Beaches" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource LabelPageHeading1}"/>
+                <Image Source="poweredbyoneline.png" WidthRequest="100" HeightRequest="25" HorizontalOptions="End"
+                       Grid.Row="0" Grid.Column="2" VerticalOptions="End"/>
 
 
-            <Picker x:Name="BeachPicker" Title="Select A Beach..." 
-                    SelectedIndexChanged="Beach_Picked"
-                    ItemDisplayBinding ="{Binding Name}"
-                    Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
-            </Picker>
+                <StackLayout Grid.Row="1" Grid.ColumnSpan="3" x:Name="TodayLabelSection">
+                    <Label Text="Today" FontSize="Medium" HorizontalOptions="Center" TextColor="{StaticResource ThemeColor1}"/>
+                    <Label x:Name="HighTempLabel" Text="{Binding TemperatureHigh, StringFormat='High Temperature: {0:N}&#186;F'}" 
+                           TextColor="{StaticResource ThemeColor1}"/>
+                    <Label x:Name="LowTempLabel" Text="{Binding TemperatureLow, StringFormat='Low Temperature: {0:N}&#186;F'}" 
+                           TextColor="{StaticResource ThemeColor1}"/>
+                    <Label x:Name="WindSpeedLabel" Text="{Binding WindSpeed, StringFormat='Wind Speed: {0:N} MPH'}" 
+                           TextColor="{StaticResource ThemeColor1}"/>
+                    <Label x:Name="UVIndexLabel" Text="{Binding UvIndex, StringFormat='UV Index: {0:N}'}"  TextColor="{StaticResource ThemeColor1}"/>
+                    <Label x:Name="DescriptionLabel" Text="{Binding Summary, StringFormat='Summary: {0:N}'}" TextColor="{StaticResource ThemeColor1}"/>
+                </StackLayout>
 
-            <Button Text="Get Directions" VerticalOptions="Center" 
-                    HorizontalOptions="Center" Clicked="DisplayDirections"
-                    Grid.Column="2" Grid.Row="0"/>
+                <ActivityIndicator x:Name="QueryingWeatherIndicator" Color="#000" IsRunning="False" 
+                               VerticalOptions="End" Grid.Column="1" Grid.Row="1"/>
 
-            <Image Source="poweredbyoneline.png"
-                   VerticalOptions="End" 
-                   HorizontalOptions="End"
-                   WidthRequest="200" HeightRequest="50"
-                   Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"/>
-
-            <BoxView x:Name = "WeatherBox" Color="#FF3399" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3"/>
-            <ActivityIndicator x:Name="QueryingWeatherIndicator" Color="#000" IsRunning="False" 
-                               VerticalOptions="End" Grid.Column="1" Grid.Row="2"/>
-
-            <RelativeLayout HeightRequest="175"
-                            Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" VerticalOptions="End">
-                <ListView x:Name="WeatherList" RowHeight="175" Rotation="270" SeparatorVisibility="None" Margin="0,5,0,5"
+                <RelativeLayout HeightRequest="175"
+                            Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" VerticalOptions="Start">
+                    <ListView x:Name="WeatherList" RowHeight="175" Rotation="270" SeparatorVisibility="None" Margin="0,5,0,5"
                           RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.5, Constant=-87}"
                           RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=-0.5, Constant=87}"
                           RelativeLayout.WidthConstraint="{ConstraintExpression Type=Constant, Constant=175}"
                           RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"
                           CachingStrategy="RecycleElement">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <ViewCell.ContextActions>
-                                    <MenuItem Text="More Info" Clicked="MenuItem_MoreInfo_Clicked"  CommandParameter="{Binding .}" />
-                                </ViewCell.ContextActions>
-                                <ContentView Rotation="90">
-                                    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
-                                        <Label Text="{Binding Day}"></Label>
-                                        <Label Text="{Binding Month}"></Label>
-                                        <Label Text="{Binding TemperatureHigh}"></Label>
-                                        <Label Text="{Binding TemperatureLow}"></Label>
-                                        <Label Text="{Binding Summary}"></Label>
-                                    </StackLayout>
-                                </ContentView>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </RelativeLayout>
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <ViewCell.ContextActions>
+                                        <MenuItem Text="More Info" Clicked="MenuItem_MoreInfo_Clicked"  CommandParameter="{Binding .}" />
+                                    </ViewCell.ContextActions>
+                                    <ContentView Rotation="90">
+                                        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
+                                            <Label Text="{Binding Day}"></Label>
+                                            <Label Text="{Binding Month}"></Label>
+                                            <Label Text="{Binding TemperatureHigh}"></Label>
+                                            <Label Text="{Binding TemperatureLow}"></Label>
+                                            <Label Text="{Binding Summary}"></Label>
+                                        </StackLayout>
+                                    </ContentView>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </RelativeLayout>
+
+                <Picker x:Name="BeachPicker" Title="Select A Beach..." 
+                    SelectedIndexChanged="Beach_Picked"
+                    ItemDisplayBinding ="{Binding Name}"
+                    Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2">
+                </Picker>
+
+                <Button Text="Directions" Style="{StaticResource DefaultButton1}" Clicked="DisplayDirections"
+                    Grid.Column="2" Grid.Row="3"/>
 
 
-        </Grid>
+            </Grid>
+        </ScrollView>
     </ContentPage.Content>
 
     <ContentPage.ToolbarItems>
